made neccessary correction on the landingButton to avoid overlapping with logo when viewed on small device

--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,11 @@ body{
 }
 /* landing page Images */
 .landingImage1, .landingImage2, .landingImage3{
-    display: flex;
+    position: relative;
+    /* display: flex;
     flex-direction: column;
     justify-content: end;
-    align-items: center;
+    align-items: center; */
     height: 100vh;
     width: 100%;
     background-size: cover;
@@ -42,12 +43,16 @@ body{
     height: 20vh;
 }
 .landingCaptionAnchor{
-    display: flex;
+    position: absolute;
+    bottom: 2vh;
+    left: 0;
+    padding-top: 60vh;
+    /* display: flex;
     flex-direction: column;
     justify-content: end;
-    align-items: center;
+    align-items: center; */
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     text-align: center;
     font-size: 38px;
     font-weight: 600;
@@ -123,6 +128,15 @@ body{
     background-color: darkred;
 }
 /* end of landingBotton*/
+
+@media only screen and (max-width:500px){
+    .landingBotton{
+        top: 100px;
+    }
+    .landingBotton:hover .landingInnerUl{
+        top: 141px;
+    }
+}
 
 /* Social media Anchor */
 .landingSocial{
